@@ -1,9 +1,15 @@
 package com.apigestionespacios.apigestionespacios.service;
 
 import com.apigestionespacios.apigestionespacios.dtos.CronogramaEspaciosDTO;
+import com.apigestionespacios.apigestionespacios.dtos.ReservaCreateDTO;
+import com.apigestionespacios.apigestionespacios.dtos.ReservaResponseDTO;
+import com.apigestionespacios.apigestionespacios.dtos.ReservaUpdateDTO;
+import com.apigestionespacios.apigestionespacios.entities.Comision;
 import com.apigestionespacios.apigestionespacios.entities.Espacio;
 import com.apigestionespacios.apigestionespacios.entities.Reserva;
 import com.apigestionespacios.apigestionespacios.entities.Solicitud;
+import com.apigestionespacios.apigestionespacios.entities.enums.DiaSemana;
+import com.apigestionespacios.apigestionespacios.exceptions.EntityValidationException;
 import com.apigestionespacios.apigestionespacios.exceptions.ReservaSolapadaException;
 import com.apigestionespacios.apigestionespacios.exceptions.ResourceNotFoundException;
 import com.apigestionespacios.apigestionespacios.repository.ReservaRepository;
@@ -15,7 +21,6 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.LinkedHashMap;
 
@@ -24,76 +29,157 @@ import java.util.LinkedHashMap;
 public class ReservaService {
 
     private final ReservaRepository reservaRepository;
+    private final ComisionService comisionService;
+    private final EspacioService espacioService;
 
     @Autowired
-    public ReservaService(ReservaRepository reservaRepository) {
+    public ReservaService(ReservaRepository reservaRepository, ComisionService comisionService, EspacioService espacioService) {
         this.reservaRepository = reservaRepository;
+        this.comisionService = comisionService;
+        this.espacioService = espacioService;
     }
 
     /**
-     * Listar todas las reservas.
+     * Convierte un DTO de reserva a una entidad Reserva.
      *
-     * @return Lista de reservas.
+     * @param dto DTO de reserva a convertir.
+     * @return Entidad Reserva.
+     * @throws EntityValidationException si las fechas o horas no son válidas.
      */
-    public List<Reserva> listarReservas() {
-        return reservaRepository.findAll();
+    public Reserva convertirDTOaReserva(ReservaCreateDTO dto) {
+        Espacio espacio = espacioService.obtenerPorId(dto.getEspacioId());
+        Comision comision = comisionService.obtenerPorId(dto.getComisionId());
+
+        if(espacio.getCapacidad() < comision.getCantidadAlumnos()) {
+            throw new EntityValidationException("La cantidad de alumnos no puede ser mayor a la capacidad del espacio.");
+        }
+
+        if (dto.getFechaFin().isBefore(dto.getFechaInicio())) {
+            throw new EntityValidationException("La fecha de fin no puede ser anterior a la de inicio.");
+        }
+
+        if (dto.getHoraFin().isBefore(dto.getHoraInicio())) {
+            throw new EntityValidationException("La hora de fin no puede ser anterior a la de inicio.");
+        }
+
+        DiaSemana dia = DiaSemana.desdeDayOfWeek(dto.getFechaInicio().getDayOfWeek());
+
+        return Reserva.builder()
+                .fechaInicio(dto.getFechaInicio())
+                .fechaFin(dto.getFechaFin())
+                .horaInicio(dto.getHoraInicio())
+                .horaFin(dto.getHoraFin())
+                .dia(dia)
+                .espacio(espacio)
+                .comision(comision)
+                .build();
     }
 
     /**
-     * Obtener una reserva por su ID.
+     * Convierte una entidad Reserva a un DTO de respuesta.
      *
-     * @param id ID de la reserva.
-     * @return Reserva encontrada.
-     * @throws ResourceNotFoundException si no se encuentra la reserva.
+     * @param r Entidad Reserva a convertir.
+     * @return DTO de respuesta de reserva.
      */
-    public Reserva obtenerReserva(Long id) {
-        return reservaRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Reserva con ID " + id + " no encontrada."));
+    private ReservaResponseDTO reservaAReservaResponseDTO(Reserva r) {
+        return ReservaResponseDTO.builder()
+                .id(r.getId())
+                .fechaInicio(r.getFechaInicio())
+                .fechaFin(r.getFechaFin())
+                .dia(r.getDia())
+                .horaInicio(r.getHoraInicio())
+                .horaFin(r.getHoraFin())
+                .nombreEspacio(r.getEspacio().getNombre())
+                .nombreComision(r.getComision().getNombre())
+                .nombreAsignatura(r.getComision().getAsignatura().getNombre())
+                .nombreDocente(r.getComision().getProfesor().getNombre() + " " + r.getComision().getProfesor().getApellido())
+                .build();
     }
 
     /**
-     * Obtener todas las reservas paginadas.
+     * Listar todas las reservas en formato DTO.
      *
-     * @param pageable Información de paginación.
-     * @return Página de reservas.
+     * @return Lista de reservas en formato DTO.
      */
-    public Page<Reserva> obtenerTodasPaginadas(Pageable pageable) {
-        return reservaRepository.findAll(pageable);
+    public List<ReservaResponseDTO> listarReservasDTO() {
+        List<Reserva> reservas = reservaRepository.findAll();
+        return listaReservasAReservasResponseDTO(reservas);
     }
 
     /**
-     * Crear una nueva reserva.
+     * Convierte una lista de reservas a una lista de ReservaResponseDTO.
      *
-     * @param reserva Reserva a crear.
+     * @param reservas Lista de reservas a convertir.
+     * @return Lista de ReservaResponseDTO.
+     */
+    public List<ReservaResponseDTO> listaReservasAReservasResponseDTO(List<Reserva> reservas) {
+        return reservas.stream()
+                .map(r -> ReservaResponseDTO.builder()
+                        .id(r.getId())
+                        .fechaInicio(r.getFechaInicio())
+                        .fechaFin(r.getFechaFin())
+                        .dia(r.getDia())
+                        .horaInicio(r.getHoraInicio())
+                        .horaFin(r.getHoraFin())
+                        .nombreEspacio(r.getEspacio().getNombre())
+                        .nombreComision(r.getComision().getNombre())
+                        .nombreAsignatura(r.getComision().getAsignatura().getNombre())
+                        .nombreDocente(r.getComision().getProfesor().getNombre() + " " + r.getComision().getProfesor().getApellido())
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    /**
+     * Crear una nueva reserva a partir de un DTO.
+     *
+     * @param dto DTO de reserva a crear.
      * @return Reserva creada.
      * @throws ReservaSolapadaException si la reserva se solapa con otra existente.
      */
-    public Reserva crearReserva(Reserva reserva) {
-        boolean solapada = existeSolapamiento(reserva);
-        if (solapada) {
+    public Reserva crearReservaDesdeDTO(ReservaCreateDTO dto) {
+        Reserva reserva = convertirDTOaReserva(dto);
+        if (existeSolapamiento(reserva)) {
             throw new ReservaSolapadaException("El espacio ya está reservado en ese horario");
         }
         return reservaRepository.save(reserva);
     }
 
     /**
-     * Actualizar una reserva existente.
+     * Actualizar una reserva existente a partir de un DTO.
      *
-     * @param reserva Reserva a actualizar.
+     * @param dto DTO de reserva con los datos actualizados.
      * @return Reserva actualizada.
      * @throws ResourceNotFoundException si no se encuentra la reserva.
+     * @throws EntityValidationException si el nuevo espacio no tiene la capacidad suficiente.
      * @throws ReservaSolapadaException si la reserva se solapa con otra existente.
      */
-    public Reserva actualizarReserva(Reserva reserva) {
-        if (reservaRepository.existsById(reserva.getId())) {
-            boolean solapada = existeSolapamiento(reserva);
-            if (solapada) {
-                throw new ReservaSolapadaException("El espacio ya está reservado en ese horario");
+    public Reserva actualizarReservaDesdeDTO(ReservaUpdateDTO dto) {
+        Reserva reservaExistente = obtenerReserva(dto.getId());
+
+        reservaExistente.setFechaInicio(dto.getFechaInicio());
+        reservaExistente.setFechaFin(dto.getFechaFin());
+        reservaExistente.setDia(DiaSemana.desdeDayOfWeek(dto.getFechaInicio().getDayOfWeek()));
+        reservaExistente.setHoraInicio(dto.getHoraInicio());
+        reservaExistente.setHoraFin(dto.getHoraFin());
+
+        // Actualiza espacio si cambió
+        if (!reservaExistente.getEspacio().getId().equals(dto.getEspacioId())) {
+
+            // Verifica que el nuevo espacio tenga la capacidad suficiente
+            if(espacioService.obtenerPorId(dto.getEspacioId()).getCapacidad() < reservaExistente.getComision().getCantidadAlumnos()) {
+                throw new EntityValidationException("La cantidad de alumnos no puede ser mayor a la capacidad del espacio.");
             }
-            return reservaRepository.save(reserva);
-        } else {
-            throw new ResourceNotFoundException("Reserva con ID " + reserva.getId() + " no encontrada.");
+
+            Espacio espacio = espacioService.obtenerPorId(dto.getEspacioId());
+            reservaExistente.setEspacio(espacio);
         }
+
+        // Valida solapamientos antes de guardar
+        if (existeSolapamiento(reservaExistente)) {
+            throw new ReservaSolapadaException("El espacio ya está reservado en ese horario");
+        }
+
+        return reservaRepository.save(reservaExistente);
     }
 
     /**
@@ -118,9 +204,13 @@ public class ReservaService {
     public void generarDesdeSolicitud(Solicitud solicitud) {
         Reserva reserva = new Reserva();
 
+        if(solicitud.getNuevoEspacio().getCapacidad() < solicitud.getComision().getCantidadAlumnos()) {
+            throw new EntityValidationException("La cantidad de alumnos no puede ser mayor a la capacidad del espacio.");
+        }
+
         reserva.setFechaInicio(solicitud.getFechaInicio());
         reserva.setFechaFin(solicitud.getFechaFin());
-        reserva.setDia(solicitud.getDiaSemana());
+        reserva.setDia(DiaSemana.desdeDayOfWeek(solicitud.getFechaInicio().getDayOfWeek()));
         reserva.setHoraInicio(solicitud.getHoraInicio());
         reserva.setHoraFin(solicitud.getHoraFin());
         reserva.setEspacio(solicitud.getNuevoEspacio());
@@ -130,40 +220,13 @@ public class ReservaService {
     }
 
     /**
-     * Listar reservas por espacio.
+     * Obtener todas las reservas ordenadas por fecha y hora.
      *
-     * @param espacioId ID del espacio.
-     * @return Lista de reservas asociadas al espacio.
+     * @return Lista de reservas ordenadas.
      */
-    public List<Reserva> listarReservasPorEspacio(Long espacioId) {
-        return reservaRepository.findByEspacioId(espacioId);
-    }
-
-    public List<Reserva> obtenerTodasOrdenadas() {
-        return reservaRepository.findAll(Sort.by("fechaInicio").ascending().and(Sort.by("horaInicio").ascending()));
-    }
-
-    public List<Reserva> obtenerReservasPorFecha(LocalDate fecha) {
-        return reservaRepository.findByFechaInicio(fecha, Sort.by("horaInicio").ascending());
-    }
-
-
-    /**
-     * Obtener reservas vigentes por Profesor asignado a la comision.
-     * @param usuarioId
-     * @return Lista de reservas asociadas al profesor.
-     */
-    public List<Reserva> obtenerReservasPorProfesor(Long usuarioId) {
-        return reservaRepository.findReservasByProfesorId(usuarioId);
-    }
-
-    /**
-     * Obtener reservas vigentes por Profesor asignado a la comision.
-     * @param usuarioId
-     * @return Lista de reservas vigentes asociadas al profesor.
-     */
-    public List<Reserva> obtenerReservasVigentesPorProfesor(Long usuarioId) {
-        return reservaRepository.findReservasActualesByProfesorId(usuarioId);
+    public List<ReservaResponseDTO> obtenerTodasOrdenadas() {
+        return listaReservasAReservasResponseDTO(
+                reservaRepository.findAll(Sort.by("fechaInicio").ascending().and(Sort.by("horaInicio").ascending())));
     }
 
     /**
@@ -193,41 +256,93 @@ public class ReservaService {
         return false;
     }
 
-
     /**
-     * Obtiene un cronograma diario de reservas agrupadas por espacio.
+     * Obtiene un cronograma de reservas para una fecha específica, agrupado por espacio.
      *
-     * @return Mapa donde la clave es el nombre del espacio y el valor es una lista de reservas.
+     * @param fecha Fecha para la cual se desea obtener el cronograma.
+     * @return Lista de CronogramaEspaciosDTO con las reservas agrupadas por espacio.
      */
-    public Map<Espacio, List<Reserva>> obtenerCronogramaDiario(LocalDate fecha) {
-
-        List<Reserva> reservas = reservaRepository.findReservasPorFecha(fecha);
-
-        return reservas.stream()
-                .collect(Collectors.groupingBy(Reserva::getEspacio, LinkedHashMap::new, Collectors.toList()));
-    }
-
     public List<CronogramaEspaciosDTO> obtenerCronogramaDTOParaFecha(LocalDate fecha) {
 
-        List<Reserva> reservas = reservaRepository.findReservasPorFecha(fecha);
+        List<ReservaResponseDTO> reservasResponse = listaReservasAReservasResponseDTO(reservaRepository.findReservasPorFecha(fecha));
 
-        return reservas.stream()
+        return reservasResponse.stream()
                 .collect(Collectors.groupingBy(
-                        r -> r.getEspacio().getId(),
+                        ReservaResponseDTO::getNombreEspacio,
                         LinkedHashMap::new,
                         Collectors.toList()
                 ))
-                .entrySet().stream()
-                .map(entry -> {
-                    Reserva primeraReserva = entry.getValue().get(0); // Para obtener el nombre del espacio
+                .values().stream()
+                .map(reservaResponseDTOS -> {
+                    ReservaResponseDTO primeraReserva = reservaResponseDTOS.getFirst(); // Para obtener el nombre del espacio
                     return CronogramaEspaciosDTO.builder()
-                            .espacioId(entry.getKey())
-                            .nombre(primeraReserva.getEspacio().getNombre())
-                            .reservas(entry.getValue())
+                            .nombreEspacio(primeraReserva.getNombreEspacio())
+                            .reservas(reservaResponseDTOS)
                             .build();
                 })
                 .collect(Collectors.toList());
     }
 
+    /**
+     * Obtener una reserva por su ID.
+     *
+     * @param id ID de la reserva.
+     * @return Reserva encontrada.
+     * @throws ResourceNotFoundException si no se encuentra la reserva.
+     */
+    public Reserva obtenerReserva(Long id) {
+        return reservaRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Reserva con ID " + id + " no encontrada."));
+    }
+
+    /**
+     * Obtener resevaResponseDTO por ID.
+     * @param id
+     * @return
+     */
+    public ReservaResponseDTO obtenerReservaDTO(Long id) {
+        Reserva reserva = obtenerReserva(id);
+        return reservaAReservaResponseDTO(reserva);
+    }
+
+
+    /**
+     * Obtener todas las reservas paginadas.
+     *
+     * @param pageable Información de paginación.
+     * @return Página de reservas.
+     */
+    public Page<ReservaResponseDTO> obtenerReservasPaginadasDTO(Pageable pageable) {
+        return reservaRepository.findAll(pageable)
+                .map(this::reservaAReservaResponseDTO);
+    }
+
+    /**
+     * Listar reservas por espacio.
+     *
+     * @param espacioId ID del espacio.
+     * @return Lista de reservas asociadas al espacio.
+     */
+    public List<ReservaResponseDTO> listarReservasPorEspacio(Long espacioId) {
+        return listaReservasAReservasResponseDTO(reservaRepository.findByEspacioId(espacioId));
+    }
+
+    /**
+        * Obtener reservas por Profesor asignado a la comision.
+        * @param usuarioId
+        * @return Lista de reservas asociadas al profesor.
+        */
+    public List<ReservaResponseDTO> obtenerReservasPorProfesor(Long usuarioId) {
+        return listaReservasAReservasResponseDTO(reservaRepository.findReservasByProfesorId(usuarioId));
+    }
+
+    /**
+     * Obtener reservas vigentes por Profesor asignado a la comision.
+     * @param usuarioId
+     * @return Lista de reservas vigentes asociadas al profesor.
+     */
+    public List<ReservaResponseDTO> obtenerReservasVigentesPorProfesor(Long usuarioId) {
+        return listaReservasAReservasResponseDTO(reservaRepository.findReservasActualesByProfesorId(usuarioId));
+    }
 
 }
